--- a/scss/style.css
+++ b/scss/style.css
@@ -1,4 +1,33 @@
+div header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: green;
+}
+
+div header:hover {
+  background-color: gray;
+}
+
 h1 {
   background-color: blue;
+}
+
+h3 {
+  color: purple;
+}
+
+p {
+  color: gray;
 }
 /*# sourceMappingURL=style.css.map */
