--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,16 @@
-h1{
-    background-color: blue;
+@import './header';
+@import './variables';
+@import './mixins';
+
+
+h3{
+    @extend header;
+    color: $purpleAccent;
+    background-color: lightcoral;
+}
+
+
+
+p{
+    color: $textColor;
 }
