--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,14 @@
-$purpleAccent: purple;
-$textColor: gray;
+//Fonts
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');
+
+$Lato: "Lato";
+$light: 300;
+$normal: 400;
+$heavy: 900;
+
+// Colors
+$purple: #9964aa;
+$backgroundAccent: #f8f8f9;
+$orange: #ff8c00;
+$grey: #3d3d3d;
+$white: #ffffff;
