--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');
 
 $Lato: "Lato";
-$light: 300;
-$normal: 400;
-$heavy: 900;
+$light: 300px;
+$normal: 400px;
+$heavy: 900px;
 
 // Colors
 $purple: #9964aa;
