--- a/scss/style.css
+++ b/scss/style.css
@@ -1,33 +1,13 @@
-div header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background: green;
-}
-
-div header:hover {
-  background-color: gray;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap");
 h1 {
-  background-color: blue;
+  font-family: "Lato";
+  font-weight: 900px;
+  font-size: 4rem;
 }
 
-h3 {
-  color: purple;
-}
-
-p {
-  color: gray;
+h2 {
+  font-family: "Lato";
+  font-weight: 400px;
+  font-size: 3rem;
 }
 /*# sourceMappingURL=style.css.map */
