--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,14 +3,16 @@
 @import './mixins';
 
 
-h3{
-    @extend header;
-    color: $purpleAccent;
-    background-color: lightcoral;
+//base styles
+
+h1{
+    font-family: $Lato;
+    font-weight: $heavy;
+    font-size: 4rem;
 }
 
-
-
-p{
-    color: $textColor;
+h2{
+    font-family: $Lato;
+    font-weight: $normal;
+    font-size: 3rem;
 }
