--- a/scss/style.css
+++ b/scss/style.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap");
-h1 {
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');
+
+.h1, h1 {
   font-family: "Lato";
-  font-weight: 900px;
-  font-size: 4rem;
+  font-weight: 900px !important;
+  font-size: 5rem;
 }
 
 h2 {
