--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,7 @@ $normal: 400px;
 $heavy: 900px;
 
 // Colors
-$purple: #9964aa;
+$purple: #800080;
 $backgroundAccent: #f8f8f9;
 $orange: #ff8c00;
 $grey: #3d3d3d;
