--- a/scss/style.css
+++ b/scss/style.css
@@ -1,14 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap");
+body {
+  width: 100%;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
 
-.h1, h1 {
+h1 {
   font-family: "Lato";
-  font-weight: 900px !important;
+  font-weight: 900px;
   font-size: 5rem;
+  text-align: center;
+  color: none;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+  background-color: black;
 }
 
 h2 {
   font-family: "Lato";
   font-weight: 400px;
+  font-size: 4rem;
+  text-align: center;
+  color: #ffffff;
+  background-color: black;
+}
+
+h3 {
+  font-family: "Lato";
+  font-weight: 400px;
   font-size: 3rem;
+  color: #800080;
+}
+
+h4 {
+  font-family: "Lato";
+  font-weight: 400px;
+  font-size: 3rem;
+  color: #3d3d3d;
+}
+
+h5 {
+  font-family: "Lato";
+  font-weight: 400px;
+  font-size: 1.5rem;
+  color: #800080;
+  text-align: center;
+}
+
+p {
+  font-family: "Lato";
+  font-weight: 300px;
+  color: #3d3d3d;
+  font-size: 1rem;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  font-family: "Lato";
+  font-weight: 400px;
+  color: #3d3d3d;
+  font-size: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
