--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,7 +2,17 @@
     border: none;
     background-color: $background-color;
     color: $white;
+    font-weight: bold;
     padding: 1% 2%;
     text-transform: uppercase;
     margin: 15px;
+
+}
+
+@mixin buttonHover($background-color, $text-color, $border-color) {
+    &:hover{
+        background-color: $background-color;
+        color: $text-color;
+        border: 3px solid $border-color;
+    }
 }
