--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,9 +3,10 @@
     background-color: $background-color;
     color: $white;
     font-weight: bold;
-    padding: 1% 2%;
+    padding: 1% 2.5%;
     text-transform: uppercase;
     margin: 15px;
+    font-size: 1.3rem;
 
 }
 
@@ -14,5 +15,28 @@
         background-color: $background-color;
         color: $text-color;
         border: 3px solid $border-color;
+    }
+}
+
+@mixin twoColumnGrid(){
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr;
+    width: 100%;
+    .left{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        justify-self: center;
+        align-self: center;
+        padding-left: 20%;
+    }
+    .right{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        justify-self: end;
     }
 }
