--- a/scss/style.css
+++ b/scss/style.css
@@ -126,7 +126,8 @@ header img:last-of-type {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  padding-left: 20%;
+  padding-left: 25%;
+  padding-right: 15%;
 }
 
 .one .right {
@@ -138,5 +139,40 @@ header img:last-of-type {
   grid-row-end: 2;
   -ms-grid-column-align: end;
       justify-self: end;
+}
+
+.two .two {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.two .two img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.two .two h2 {
+  position: absolute;
+  top: 30%;
+  right: 50%;
+}
+
+.two button {
+  border: none;
+  background-color: #ff8c00;
+  color: #ffffff;
+  font-weight: bold;
+  padding: 1% 2.5%;
+  text-transform: uppercase;
+  margin: 15px;
+  font-size: 1.3rem;
+}
+
+.two button:hover {
+  background-color: transparent;
+  color: #ff8c00;
+  border: 3px solid #ff8c00;
 }
 /*# sourceMappingURL=style.css.map */
