--- a/scss/_divThree.scss
+++ b/scss/_divThree.scss
@@ -17,7 +17,9 @@
             }
         }
         .border{
-            border-color: yellow;
+            border: 2px solid $purple;
+            border-radius: 60px;
+            padding: 20px;
             img{
                 width: 100px;
                 align-content: center;
