--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@ header{
     img:first-of-type{
         position: relative;
         width: 100%;
+        height: 100%;
     }
     
     svg{
@@ -14,7 +15,7 @@ header{
 
     h1{
         position: absolute;
-        top: 58%;
+        top: 48%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
