--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin squareButton($background-color){
-    border: none;
+    border: 3px solid $background-color;
     background-color: $background-color;
     color: $white;
     font-weight: bold;
-    padding: 1% 2.5%;
+    padding: 1.5% 2.5%;
     text-transform: uppercase;
     margin: 15px;
     font-size: 1.3rem;
@@ -19,6 +19,8 @@
 }
 
 @mixin twoColumnGrid($justify-self){
+    padding: 0;
+    margin: 0;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 1fr;
