--- a/scss/style.css
+++ b/scss/style.css
@@ -3,6 +3,8 @@ body {
   width: 100%;
   -ms-flex-line-pack: center;
       align-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
@@ -18,6 +20,7 @@ h2 {
   font-weight: 400px;
   font-size: 3rem;
   color: #800080;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -56,6 +59,7 @@ li {
 header img:first-of-type {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
 header svg {
@@ -69,18 +73,18 @@ header svg {
 
 header h1 {
   position: absolute;
-  top: 58%;
+  top: 48%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
 
 header button {
-  border: none;
+  border: 3px solid #800080;
   background-color: #800080;
   color: #ffffff;
   font-weight: bold;
-  padding: 1% 2.5%;
+  padding: 1.5% 2.5%;
   text-transform: uppercase;
   margin: 15px;
   font-size: 1.3rem;
@@ -105,6 +109,8 @@ header img:last-of-type {
 }
 
 .one {
+  padding: 0;
+  margin: 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50% 50%;
@@ -141,15 +147,37 @@ header img:last-of-type {
       justify-self: end;
 }
 
+.one .right img {
+  height: 650px;
+}
+
+.two {
+  width: 100%;
+  position: relative;
+}
+
+.two img {
+  width: 100%;
+}
+
+.two .content-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-160%, -50%);
+          transform: translate(-160%, -50%);
+}
+
 .two button {
-  border: none;
+  border: 3px solid #ff8c00;
   background-color: #ff8c00;
   color: #ffffff;
   font-weight: bold;
-  padding: 1% 2.5%;
+  padding: 1.5% 2.5%;
   text-transform: uppercase;
   margin: 15px;
   font-size: 1.3rem;
+  padding: 4% 5%;
 }
 
 .two button:hover {
@@ -159,6 +187,8 @@ header img:last-of-type {
 }
 
 .three {
+  padding: 0;
+  margin: 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50% 50%;
@@ -229,7 +259,9 @@ header img:last-of-type {
 }
 
 .three .right .border {
-  border-color: yellow;
+  border: 2px solid #800080;
+  border-radius: 60px;
+  padding: 20px;
 }
 
 .three .right .border img {
