--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -30,6 +30,9 @@ h3{
     font-weight: $normal;
     font-size: 3rem;
     color: $grey;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0; 
 }
 
 h4{
