--- a/scss/style.css
+++ b/scss/style.css
@@ -28,6 +28,9 @@ h3 {
   font-weight: 400px;
   font-size: 3rem;
   color: #3d3d3d;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 
 h4 {
@@ -164,8 +167,8 @@ header img:last-of-type {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-160%, -50%);
-          transform: translate(-160%, -50%);
+  -webkit-transform: translate(-105%, -50%);
+          transform: translate(-105%, -50%);
 }
 
 .two button {
@@ -187,6 +190,7 @@ header img:last-of-type {
 }
 
 .three {
+  width: 100%;
   padding: 0;
   margin: 0;
   display: -ms-grid;
@@ -226,6 +230,8 @@ header img:last-of-type {
 }
 
 .three .right {
+  background-color: #f8f8f9;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,8 +250,8 @@ header img:last-of-type {
 }
 
 .three .right .icon {
-  margin: 5%;
-  padding: 5%;
+  margin-left: 3%;
+  padding: 8%;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -254,17 +260,19 @@ header img:last-of-type {
 }
 
 .three .right .icon p {
-  text-align: center;
+  text-align: left;
   margin-top: 5%;
+  padding-left: 3%;
+  text-transform: uppercase;
 }
 
-.three .right .border {
+.three .right .icon .border {
   border: 2px solid #800080;
-  border-radius: 60px;
+  border-radius: 90px;
   padding: 20px;
 }
 
-.three .right .border img {
+.three .right .icon .border img {
   width: 100px;
   -ms-flex-line-pack: center;
       align-content: center;
