--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -44,7 +44,11 @@
     }
 }
 
-@mixin imgOverlay() {
-    
+@mixin wideImgDiv() {
+    width: 100%;
+    position: relative;
+    img{
+        width: 100%;
+    }
 }
 
