div five styling sans carosel

--- a/scss/_divFive.scss
+++ b/scss/_divFive.scss
@@ -1,4 +1,12 @@
 .five{
-    width: 100%;
     @include twoColumnGrid(center);
+    width: 100%;
+    #stars{
+        margin-top: 5%;
+        .fa-star{
+            color: $orange;
+            font-size: 1.3rem;
+            margin: 1%;
+        }
+    }
 }
