--- a/scss/style.css
+++ b/scss/style.css
@@ -365,6 +365,26 @@ header img:last-of-type {
 }
 
 footer {
-  background-color: red;
+  background-color: #f8f8f9;
+}
+
+footer div {
+  padding: 2%;
+}
+
+footer div p {
+  color: #3d3d3d;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+footer div div {
+  margin-left: 41%;
+}
+
+footer div div img {
+  width: 65px;
+  padding: 0 1.5% 0 1.5%;
 }
 /*# sourceMappingURL=style.css.map */
