--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -50,6 +50,12 @@ p{
     font-size: 1rem;
 }
 
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 li{
     font-family: $Lato;
     font-weight: $normal;
