--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -7,6 +7,15 @@
     .carousel-track-container{
         height: 100%;
         position: relative;
+        overflow: hidden;
+    }
+
+    .carousel-track{
+        padding: 0;
+        margin: 0;
+        position: relative;
+        height: 100%;
+        transition: transform 250ms ease-in;
     }
 
     .carousel-slide{
