--- a/scss/style.css
+++ b/scss/style.css
@@ -329,6 +329,7 @@ header img:last-of-type {
       grid-template-rows: 1fr;
   width: 100%;
   width: 100%;
+  height: 450px;
 }
 
 .five .left {
@@ -402,6 +403,18 @@ footer div div img {
 .carousel .carousel-track-container {
   height: 100%;
   position: relative;
+  overflow: hidden;
+}
+
+.carousel .carousel-track {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  height: 100%;
+  -webkit-transition: -webkit-transform 250ms ease-in;
+  transition: -webkit-transform 250ms ease-in;
+  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
 .carousel .carousel-slide {
