--- a/scss/style.css
+++ b/scss/style.css
@@ -48,6 +48,12 @@ p {
   font-size: 1rem;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 li {
   font-family: "Lato";
   font-weight: 400px;
@@ -148,6 +154,8 @@ header img:last-of-type {
 
 .one .right img {
   height: 475px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .two {
@@ -321,6 +329,7 @@ header img:last-of-type {
       grid-template-rows: 1fr;
   width: 100%;
   width: 100%;
+  height: 450px;
 }
 
 .five .left {
@@ -382,5 +391,90 @@ footer div div {
 footer div div img {
   width: 65px;
   padding: 0 1.5% 0 1.5%;
+}
+
+.carousel {
+  position: relative;
+  height: 200px;
+  width: 500px;
+  margin: 10 auto;
+}
+
+.carousel .carousel-track-container {
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel .carousel-track {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  height: 100%;
+  -webkit-transition: -webkit-transform 250ms ease-in;
+  transition: -webkit-transform 250ms ease-in;
+  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
+}
+
+.carousel .carousel-slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+
+.carousel .carousel-button--left {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: transparent;
+  border: 0;
+  left: -50px;
+  cursor: pointer;
+}
+
+.carousel .carousel-button--right {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: transparent;
+  border: 0;
+  right: -50px;
+  cursor: pointer;
+}
+
+.carousel .fa-chevron-left, .carousel .fa-chevron-right {
+  font-size: 1.5rem;
+  color: #800080;
+}
+
+.carousel .carousel-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px 0;
+}
+
+.carousel .carousel-indicator {
+  border: 0;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background: #3d3d3d;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.carousel .carousel-indicator .current-slide {
+  background: #f8f8f9;
+}
+
+.carousel .hidden {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
