--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -2,7 +2,7 @@
     position:relative;
     height: 200px;
     width: 500px;
-    margin: 10 auto;
+    margin: auto auto;
     
     .carousel-track-container{
         height: 100%;
@@ -22,6 +22,7 @@
         position: absolute;
         top: 0;
         bottom: 0;
+        width: 100%;
     }
 
     .carousel-button--left{
@@ -63,10 +64,6 @@
         background: $grey;
         margin: 0 5px;
         cursor: pointer;
-    }
-
-    .carousel-indicator .current-slide{
-        background: $backgroundAccent
     }
 
     .hidden{
