toggle function and styles

--- a/scss/_divThree.scss
+++ b/scss/_divThree.scss
@@ -1,6 +1,7 @@
 .three{
     width: 100%;
     @include twoColumnGrid(center);
+    @include slDetails();
     .right{
         background-color: $backgroundAccent;
         width: 100%;
