--- a/scss/_divOne.scss
+++ b/scss/_divOne.scss
@@ -1,7 +1,9 @@
 .one{
    @include twoColumnGrid(end);
+   @include slDetails();
    .right img{
       height: 475px;
       object-fit: cover;
    }
+   
 }
