added intersection observers and fade in on wide img divs

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -73,3 +73,14 @@
     }
 }
 
+@mixin fadeIn() {
+    .fade-in{
+        opacity: 0;
+        transition: opacity 800ms ease-in ;
+    }
+
+    .fade-in.appear{
+        opacity: 1;
+    }
+}
+
