slide in animation

--- a/scss/_divOne.scss
+++ b/scss/_divOne.scss
@@ -1,6 +1,8 @@
 .one{
    @include twoColumnGrid(end);
    @include slDetails();
+   @include slideIn();
+   
    .right img{
       height: 475px;
       object-fit: cover;
