--- a/scss/style.css
+++ b/scss/style.css
@@ -385,6 +385,15 @@ header img:last-of-type {
   border: 2px solid #800080;
   border-radius: 90px;
   padding: 20px;
+  position: relative;
+  -webkit-transition-property: border-radius;
+  transition-property: border-radius;
+  -webkit-transition-duration: 100ms;
+          transition-duration: 100ms;
+}
+
+.three .right .icon .border:hover {
+  border-radius: 20px;
 }
 
 .three .right .icon .border img {
