--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,3 +12,7 @@ $backgroundAccent: #f8f8f9;
 $orange: #ff8c00;
 $grey: #3d3d3d;
 $white: #ffffff;
+
+//Breakpoints
+$breakpoint-mobile: 480px;
+$breakpoint-desktop: 769px
